fix up route request
